@@ -1,3 +1,8 @@
+2005-02-09 Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+        * slab.cpp: Add support for biaxial plane wave estimates.
+        * slab.h: Ditto.
+
 2005-01-28 Peter Debackere  <Peter.Debackere@UGent.be>
 
 	* slab.cpp: First version of of ASR solver.
